<resources>
    <string name="app_name">BasicNavDrawer</string>
    <string name="my_debt">My Debt</string>
    <string name="they_debt">They Debt</string>
    <string name="home">Home</string>
    <string name="individuals">Individuals</string>
    <string name="import_data">Import</string>
    <string name="export_data">Export</string>
    <string name="import_export">Import/Export</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>