<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"
            />
        <item
            android:id="@+id/nav_my_debt"
            android:title="@string/my_debt"
            android:icon="@drawable/ic_baseline_horizontal_rule_24"
            />

        <item
            android:id="@+id/nav_they_debt"
            android:title="@string/they_debt"
            android:icon="@drawable/ic_baseline_add_24"
            />

        <item
            android:id="@+id/nav_individuals"
            android:title="@string/individuals"
            android:icon="@drawable/ic_baseline_people_24"
            />

        <item
            android:id="@+id/nav_import_export"
            android:title="@string/import_export"
            android:icon="@drawable/ic_baseline_import_export_24"
            />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            />
    </group>



</menu>